# EAtHome

./: README.md
client/: README.md  package-lock.json  package.json  tailwind.config.cjs
client/src/: App.tsx  index.css
client/src/layouts/: MainLayout.tsx
client/src/layouts/MainFooter/: MainFooter.tsx
client/src/layouts/MainNavbar/: MainNavbar.tsx
client/src/layouts/MainNavbar/ProfileDropdown/: ProfileDropdown.tsx  ProfileDropdownLinkItem.tsx  dropdownLinks.ts
client/src/layouts/Navbar/: Navbar.tsx  ProfileDropdown.tsx
client/src/pages/: NotFoundPage.tsx
server/: .env-example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/docs/: relation.md
server/migrations/: env.py
server/migrations/versions/: 633f772c0430_add_product_and_record.py  836abce14d89_init.py
server/src/: auth.py  main.py  settings.py
server/src/api/: login.py
server/src/api/v1/: api_v1.py  order.py  shop.py  user.py
server/src/database/: __init__.py  link.py  order.py  product.py  session.py  shop.py  trade_record.py  user.py
server/src/query/: __init__.py  base_query.py  link_query.py  order_query.py  product_query.py  shop_query.py  trade_record_query.py  user_query.py
