[project]
name = ""
version = ""
description = ""
authors = [
    {name = "BaBa0525", email = "hsunhsun0525@gmail.com"},
    {name = "alan910127", email = "alan469357@gmail.com"},
]
dependencies = [
    "fastapi>=0.86.0",
    "uvicorn>=0.19.0",
    "sqlmodel>=0.0.8",
    "asyncpg>=0.27.0",
    "python-dotenv>=0.21.0",
    "fastapi-login>=1.8.3",
    "python-multipart>=0.0.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
dev = "uvicorn src:app --reload"
migrate = "alembic revision --autogenerate"
push_db = "alembic upgrade head"

[tool.pdm.dev-dependencies]
dev = [
    "alembic>=1.8.1",
]
